--- a/style.css
+++ b/style.css
@@ -122,4 +122,31 @@ body {
     100% { transform: scale(1); }
 }
 
+/* Auth Modal */
+.auth-tab {
+    position: relative;
+    color: #666;
+}
+.auth-tab.active {
+    color: #6e8efb;
+    font-weight: 500;
+}
+.auth-tab.active:after {
+    content: '';
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: #6e8efb;
+}
+
+/* Hata Mesajları */
+.auth-error {
+    color: #e53e3e;
+    font-size: 0.875rem;
+    margin-top: 0.5rem;
+    display: none;
+}
+
 
